# trading-bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.json.example
src/bot_trade/strategies/: MA50_200_Strategy.py  MyStrategy.py
user_data/: config.json.example
