[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-trade"
version = "0.1.0"
description = "Crypto Trading Bot using Freqtrade library"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}

dependencies = [
    # Freqtrade từ git repository
    "freqtrade @ git+ssh://git@github.com/freqtrade/freqtrade.git@develop",
    "plotly>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

# Dependencies sẽ được quản lý bằng uv
# Sử dụng: uv add <package> hoặc uv add --dev <package>

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

# Freqtrade được cài từ git repository
# Để cài từ local path, thay đổi dependencies thành:
# "freqtrade @ file:///path/to/freqtrade"

